[project]
name = "hosts-manager"
version = "0.2.7"
description = "A script to manage the /etc/hosts file."
authors = [
    { name="Friedjof Noweck", email="git@noweck.info" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "setuptools>=72.1.0",
    "validators>=0.33.0"
]

[project.urls]
Homepage = "https://github.com/Friedjof/hosts"
Documentation = "https://github.com/Friedjof/hosts/blob/main/README.md"
Source = "https://github.com/Friedjof/hosts"
Tracker = "https://github.com/Friedjof/hosts/issues"

[project.scripts]
hosts = "hosts.main:main"
